# Lavoisier

./: .gitignore  Conversão lxml.xlsx  Correspondence.xlsx  ISIC.txt  Id_elementary_exchanges.csv  MANIFEST.in  Mapping_ES2ILCD.xlsx  README.md  additional_functions.py  compartment.csv  conversion.csv  conversion_3.csv  converter.py  factor_c.csv  file_creation.py  flow_prop_and_unit_groups.py  requirements.txt  setup.cfg
flow_properties/: 01846770-4cfe-4a25-8ad9-919d8d378345.json  01846770-4cfe-4a25-8ad9-919d8d378345.xml  05e42ba1-dbcd-4dc2-b735-a2f17dd211ae.json  05e42ba1-dbcd-4dc2-b735-a2f17dd211ae.xml  0ddc622a-bc4a-4cf8-a551-9e112864b77f.json  0ddc622a-bc4a-4cf8-a551-9e112864b77f.xml  27f62f94-3fe1-4df5-9693-9112b832decb.json  27f62f94-3fe1-4df5-9693-9112b832decb.xml  2d9d802c-002d-4018-a702-d2d46e78625a.json  2d9d802c-002d-4018-a702-d2d46e78625a.xml  441238a3-ba09-46ec-b35b-c30cfba746d1.json  441238a3-ba09-46ec-b35b-c30cfba746d1.xml  45915a2c-6ee8-45bd-8a46-070a7261558e.json  45915a2c-6ee8-45bd-8a46-070a7261558e.xml  4e10f566-0358-489a-8e3a-d687b66c50e6.json  4e10f566-0358-489a-8e3a-d687b66c50e6.xml  58ea2de8-1f31-4248-9b03-18ec5d8db13b.json  58ea2de8-1f31-4248-9b03-18ec5d8db13b.xml  64771383-534c-4051-84ca-e195564d5425.json  64771383-534c-4051-84ca-e195564d5425.xml  838aaa20-0117-11db-92e3-0800200c9a66.json  838aaa20-0117-11db-92e3-0800200c9a66.xml  838aaa23-0117-11db-92e3-0800200c9a66.json  838aaa23-0117-11db-92e3-0800200c9a66.xml  8766e10f-9f41-4db0-8173-ad0d002a5b98.json  8766e10f-9f41-4db0-8173-ad0d002a5b98.xml  8a9107c2-62a2-4997-95b0-6944c80b774e.json  8a9107c2-62a2-4997-95b0-6944c80b774e.xml  93a60a56-a3c8-11da-a746-0800200b9a66.json  93a60a56-a3c8-11da-a746-0800200b9a66.xml  93a60a56-a3c8-11da-a746-0800200c9a66.json  93a60a56-a3c8-11da-a746-0800200c9a66.xml  93a60a56-a3c8-13da-a746-0800200c9a66.json  93a60a56-a3c8-13da-a746-0800200c9a66.xml  93a60a56-a3c8-14da-a746-0800200c9a66.json  93a60a56-a3c8-14da-a746-0800200c9a66.xml  93a60a56-a3c8-17da-a746-0800200c9a66.json  93a60a56-a3c8-17da-a746-0800200c9a66.xml  93a60a56-a3c8-19da-a746-0800200c9a66.json  93a60a56-a3c8-19da-a746-0800200c9a66.xml  (+26 more)
tests/: __init__.py  pytest.ini  test_ECS2_structure.py  test_ECS2_to_ILCD1_conversion.py  test_ILCD1_structure.py  test_ILCD1_to_ECS2_conversion.py  test_validators.py
unit_groups/: 11d161f0-37e3-4d49-bf7a-ff4f31a9e5c7.json  11d161f0-37e3-4d49-bf7a-ff4f31a9e5c7.xml  258d6abd-14f2-4484-956c-c88e8f6fd8ed.json  258d6abd-14f2-4484-956c-c88e8f6fd8ed.xml  326eb58b-e5b3-4cea-b45a-2398c25109f8.json  326eb58b-e5b3-4cea-b45a-2398c25109f8.xml  36932b14-ba61-417b-a80c-eb9935d193f1.json  36932b14-ba61-417b-a80c-eb9935d193f1.xml  3dbb60e1-edde-49f7-b28d-f34b4af727b3.json  3dbb60e1-edde-49f7-b28d-f34b4af727b3.xml  5454b231-270e-45e6-89b2-7f4f3e482245.json  5454b231-270e-45e6-89b2-7f4f3e482245.xml  59f191d6-5dd3-4553-af88-1a32accfe308.json  59f191d6-5dd3-4553-af88-1a32accfe308.xml  59f6a0a2-731f-41c3-86df-d383dc673dfe.json  59f6a0a2-731f-41c3-86df-d383dc673dfe.xml  5beb6eed-33a9-47b8-9ede-1dfe8f679159.json  5beb6eed-33a9-47b8-9ede-1dfe8f679159.xml  838aaa21-0117-11db-92e3-0800200c9a66.json  838aaa21-0117-11db-92e3-0800200c9a66.xml  838aaa22-0117-11db-92e3-0800200c9a66.json  838aaa22-0117-11db-92e3-0800200c9a66.xml  876adcd3-29e6-44e2-acdd-11be304ae654.json  876adcd3-29e6-44e2-acdd-11be304ae654.xml  93a60a57-a3c8-11da-a746-0800200c9a66.json  93a60a57-a3c8-11da-a746-0800200c9a66.xml  93a60a57-a3c8-12da-a746-0800200c9a66.json  93a60a57-a3c8-12da-a746-0800200c9a66.xml  93a60a57-a3c8-16da-a746-0800200c9a66.json  93a60a57-a3c8-16da-a746-0800200c9a66.xml  93a60a57-a3c8-18da-a746-0800200c9a66.json  (+23 more)
(+156 files in other folders)
