[metadata]
name = Lavoisier
version = 0.0.17
author = José Paulo Pereira das Dores Savioli
author_email = jpsavioli@hotmail.com
description = This package converts Life Cycle Assessment format Ecospold2 (ecoinvent format) to ILCD (jrc format). Files can be converted by file or entire directory. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JosePauloSavioli/IBICT-converter
project_urls =
    Bug Tracker = https://github.com/JosePauloSavioli/IBICT-converter/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    lxml >=4.6.3
    cfunits >=3.3.2
include_package_data = true

[options.packages.find]
where = src
