[metadata]
name = Lavoisier
version = attr: Lavoisier.__version__
author = José Paulo Pereira das Dores Savioli
author_email = jsavioli@alunos.utfpr.edu.br
description = This package converts Life Cycle Assessment format Ecospold2 (ecoinvent format) to ILCD (jrc format). Files can be converted by file using the 'convert_file_to_ILCD' function or entire directory using the 'convert_dir_to_ILCD' function. Lavoisier is developed by the Center of Life Cycle Sustainable Assessment (Gyro) of the Federal University of Technology - Paraná (UTFPR) and the  Brazilian Institute for Information in Science and Technology (IBICT) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JosePauloSavioli/IBICT-converter
project_urls =
    Bug Tracker = https://github.com/JosePauloSavioli/IBICT-converter/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    lxml
include_package_data = true

[options.packages.find]
where = src
