[metadata]
name = Lavoisier
version = attr: Lavoisier.__version__
author = José Paulo Pereira das Dores Savioli
author_email = jsavioli@alunos.utfpr.edu.br
description = This package converts Life Cycle Assessment inventory formats. Lavoisier is developed by the Center of Life Cycle Sustainable Assessment (Gyro) of the Federal University of Technology - Paraná (UTFPR) and the  Brazilian Institute for Information in Science and Technology (IBICT)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JosePauloSavioli/Lavoisier
keywords = LCI, LCA, LCIA, ACV, AICV, format converter, converter, inventory
project_urls =
    Bug Tracker = https://github.com/JosePauloSavioli/Lavoisier/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    openturns
    pathlib
    pint
    xmltodict
    pycryptodome
include_package_data = True

[options.extras_require]
test = 
    pytest

[options.packages.find]
where = src
